fix: style in header menu text no wrap and icon home

--- a/src/components/ui/header/Header.module.css
+++ b/src/components/ui/header/Header.module.css
@@ -34,8 +34,7 @@
             .right_header {
                 display: flex;
                 align-items: center;
-                width: 100%;
-                gap: 20px;
+                gap: 30px;
 
                 > a {
                     display: inline-block;
